Project

General

Profile

Actions

Bug #20633

closed

mon: does not send mgrdigest to mgr, making mgr init block

Added by Sage Weil almost 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2017-07-14 18:44:20.080103 7f0393fff700  4 mgr init waiting for config-keys...
2017-07-14 18:44:20.080121 7f0393fff700 10 mgr load_config listing keys
2017-07-14 18:44:20.080162 7f0393fff700  1 -- 172.21.15.30:0/2285172147 --> 172.21.15.30:6789/0 -- mon_command({"prefix": "config-key list"} v 0) v1 -- 0x7f038800e770 con 0
...
2017-07-14 18:44:20.177136 7f0393fff700  4 mgr insert_config Loaded 0 config settings
...

then nothing else from this thread.

/a/sage-2017-07-14_18:27:24-rados-wip-20602-distro-basic-smithi/1399856

It looks like the mon gets the subscription,

2017-07-14 18:44:20.068312 1470c700 10 mon.a@0(leader) e1 handle_subscribe mon_subscribe({fsmap=0+,log-info=0+,mgrdigest=0+,mgrmap=0+,monmap=2+,osdmap=2,servicemap=0+}) v2

but only the mgrmaps are sent,
2017-07-14 18:44:20.119340 18f15700  4 mon.a@0(leader).mgr e2 loading version 3
2017-07-14 18:44:20.119812 18f15700  4 mon.a@0(leader).mgr e3 active server: -(4098)
2017-07-14 18:44:20.120329 18f15700 20 mon.a@0(leader).mgr e3 Sending map to subscriber 0x16b8ba20
2017-07-14 18:44:20.120491 18f15700  1 -- 172.21.15.30:6789/0 --> 172.21.15.30:0/3521370034 -- mgrmap(e 3) v1 -- 0x197bff50 con 0
2017-07-14 18:44:20.121620 18f15700 20 mon.a@0(leader).mgr e3 Sending map to subscriber 0x16ee1410
2017-07-14 18:44:20.121741 18f15700  1 -- 172.21.15.30:6789/0 --> 172.21.15.30:0/2285172147 -- mgrmap(e 3) v1 -- 0x197c0760 con 0


Related issues 1 (0 open1 closed)

Related to Ceph - Bug #20678: MonClient: stuck `ceph pg dump`Duplicate07/18/2017

Actions
Actions #2

Updated by Sage Weil almost 7 years ago

  • Status changed from 12 to Need More Info
Actions #3

Updated by Sage Weil over 6 years ago

  • Related to Bug #20678: MonClient: stuck `ceph pg dump` added
Actions #4

Updated by Sage Weil over 6 years ago

  • Status changed from Need More Info to Fix Under Review

https://github.com/ceph/ceph/pull/16582

I'm still not quite sure why, in patrick's run (pdonnell-2017-07-18_16:08:43-multimds-master-testing-basic-smithi/1412747), we didn't send the digest 5 seconds later. The event just doesn't seem to fire. I guess we just weren't active then.

Actions #5

Updated by Kefu Chai over 6 years ago

  • Status changed from Fix Under Review to Resolved
  • Assignee set to Sage Weil
Actions

Also available in: Atom PDF