mon/MgrMonitor: reset mgrdigest timer with new subscription

If the manager reconnects, we want to send the digest immediately and
reset the previous timer.

Fixes: http://tracker.ceph.com/issues/20633
Signed-off-by: Sage Weil <sage@redhat.com>